# chucaw-glue-scripts

./: .dockerignore  .gitattributes  .gitignore  DEPLOY_TASKS.md  Dockerfile  Dockerfile.glue-builder  GLUE_DEPLOYMENT_GUIDE.md  README.md  build_glue_libs.sh  lista_de_glue50.txt  pyproject.toml  requirements-glue.txt  requirements.txt  verify_glue_deps.py
.github/workflows/: build-glue-wheels.yml  deploy-ecr.yml  docker-build.yml
docs/: GLUE_DEPENDENCY_BUILD.md  aws-glue-field-guide-101.md
docs/archive/: 0404_RESUMEN_MIGRACION.md  0404_plan.md  0404_upload_guide.md  ARCHIVE_REASON.md  BUILD_SYSTEM_SUMMARY.txt  CONVERSION_ISSUES_RESOLVED.md  GLUE_BUILD_QUICKSTART.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  KANBAN.md  PLAN_SONNET.md  START_HERE.txt  WORKFLOW_DIAGRAM.txt  batch_runner.sh  benchmark_results.txt  boulder.json  fixer.py  fixer2.py  fixer_wsl.py  lista_de_glue50.txt  patch.py  patch_mem.py  quick.py  quick_test.sh  rebuild.sh  runner.sh  temp_test.sh  verify.sh  wsl_benchmark_results.txt  wsl_final_batch.txt
docs/archive/legacy_root/: build-glue-deps.ps1  deploy-and-test-glue.ps1  test-glue-build.ps1
docs/archive/legacy_temp/: fix_builder.py
docs/sphinx/: Makefile  make.bat
examples/: README.md  glue-job-example.json  glue-job-example.py
glue/job-definitions/: create-job-bronze-to-platinum.json  update-job-bronze-to-platinum.json
glue/job-runs/: start-job-run-by-date-run.json  start-job-run-by-key.json
scripts/: batch_process_gribs.sh  benchmark_parquet_strategies.py  build_glue_artifacts.ps1  build_glue_artifacts.sh  verify_parquet_images.py
scripts/experiments/: chunked_ecmwf.py
scripts/glue_jobs/: bronze_to_pangu.py  bronze_to_platinum_parquet.py  grib_to_platinum_parquet.py  pangu_to_silver.py  parquet_to_silver.py
scripts/smoke/: glue_runtime_smoke.py
scripts/tests/: test_conversion_synthetic.py  test_rigorous_glue.py
src/: pangu_prep_pipeline.py  parquet_prep_pipeline.py
src/chucaw_preprocessor/: __init__.py  ecmwf.py  glue_args.py  job_common.py
(+8 files in other folders)
