[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chucaw-preprocessor"
version = "0.1.0"
description = "ECMWF GRIB preprocessing jobs for AWS Glue (Bronze to Silver)."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
  "boto3==1.34.*",
  "numpy==1.26.*",
  "xarray==2024.2.*",
  "cfgrib==0.9.14.*",
  "eccodes==1.6.*",
  "pandas==2.2.*",
  "pyarrow==16.1.*",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
