[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chucaw-preprocessor"
version = "0.1.0"
description = "ECMWF GRIB preprocessing jobs for AWS Glue (Bronze to Silver)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "xarray==2024.2.0",
  "cfgrib==0.9.14.1",
  "eccodes==2.42.0",
  "eccodeslib==2.42.0",
]

[project.optional-dependencies]
glue-base = [
  "boto3==1.34.131",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pyarrow==17.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
